src/compose/tests/expected/err_validation_1.txt
error: failed to build a valid final module: Function [1] 'func' is invalid
  ┌─ tests/error_test/wgsl_valid_err.wgsl:4:16
  │  
4 │       return 1.0;
  │ ╭───────────────^
5 │ │ }
6 │ │ 
7 │ │ pub fn func() -> f32 {
8 │ │     return 1u;
  │ │    ^^ naga::Expression [0]
  │ ╰──────^ naga::Function [1]
  │  
  = The `return` value Some([0]) does not match the function return value

